--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  background-attachment: fixed;
+  background-image: url('./doc1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  padding-top: 100px;
+}
