--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,7 +3,7 @@ body {
   background-image: url('../public/doc1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  // font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding-top: 100px;
 }
